src/test/deca/syntax/valid/test_classe_vide.deca
// Description:
//    test la classe vide
//
// Resultats: 
//
//
// Historique:
//    crée le 10/01/2022


class A {



}

