src/test/deca/syntax/invalid/mauvaisToken_chaine_1.deca
// Description:
//    tests des chaines de caracteres
//
// Resultats:
//    Ligne 10 : Erreur lexical
//
// Historique:
//    crée le 11/01/2022

{
" x 

et y"
}
